Should have fixed resume styling to be more mobile friendly. Need to remove side bars on mobile screen

--- a/app/home/static/css/resume.css
+++ b/app/home/static/css/resume.css
@@ -23,8 +23,11 @@ ul {
 
 .resume #edu-content #edu-left {
   border-right: 2px solid blue;
-  min-width: 330px;
-  max-width: 330px;
+  width: 40%;
+}
+
+.resume #edu-content #edu-right {
+  width: 60%;
 }
 
 .resume #edu-content h3 {
@@ -40,8 +43,6 @@ ul {
 .resume #exp-content .exp-card {
   padding: 8px 15px;
   align-self: center;
-  max-width: 330px;
-  min-width: 330px;
 }
 
 .resume #exp-content #pickens {
@@ -51,6 +52,7 @@ ul {
 .resume #exp-content #exp-left {
   text-align: right;
   border-right: 2px solid blue;
+  width: 40%;
 }
 
 .resume #exp-content #exp-left h3 {
@@ -59,6 +61,7 @@ ul {
 
 .resume #exp-content #exp-right {
   align-self: center;
+  width: 60%;
 }
 
 .resume #exp-content .exp-info {
@@ -79,4 +82,8 @@ ul {
 
 .resume #exp-content #wireless {
   display: flex;
+}
+
+@media (max-width: 650px) {
+
 }
